# glocaltokens

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  README.md  conf.py  get_tokens.py  index.rst  mypy.ini  pyproject.toml  requirements  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml  labeler.yml  labels.yml  release-drafter.yml
.github/actions/install-deps/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: build.yml  glocaltokens_ci.yml  linting-and-testing.yaml  publish.yml  release-drafter.yml  sphinx.yml  tests.yaml
example/: get_tokens.py
glocaltokens/: __init__.py  client.py  const.py  scanner.py  types.py
glocaltokens/google/internal/home/foyer/: v1.proto  v1_pb2.py  v1_pb2.pyi  v1_pb2_grpc.py  v1_pb2_grpc.pyi
glocaltokens/utils/: logs.py  network.py  token.py  type.py  types.py
google/internal/home/foyer/: v1_pb2.py  v1_pb2_grpc.py
tests/: assertions.py  test_client.py  test_scanner.py  test_utils.py  token_provider.py
tests/factory/: __init__.py  const.py  mixin.py  providers.py
